# user-pool

./: .gitignore  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.yaml  justfile  pyproject.toml
configs/: Dockerfile  loki-config.yml  prometheus.yml  vector.toml
configs/config/: .env.dev.dist  .env.test.dist  config.yaml
configs/contracts/auth/: auth.proto  users.proto
configs/grafana/dashboards/: fastapi-dashboard.json
configs/nginx/: nginx.conf
scripts/: plot_dependencies_data.py
src/user_pool/application/commands/: __init__.py  all_users_unclocked.py  login.py  logout.py  register.py  user_created.py  user_locked.py  user_unlocked.py
src/user_pool/application/queries/: __init__.py  get_user_id.py  health_checker.py  user_get_by_id.py  user_is_locked.py  users_list.py
src/user_pool/delivery/http/: exception_handler.py  http_response_schemes.py  response_data_editor.py  secure.py
src/user_pool/domain/entities/: __init__.py  assigned_user.py  base.py  user.py
src/user_pool/domain/exceptions/: base.py  user.py
src/user_pool/domain/ports/: __init__.py  password_hasher.py  user_id_generator.py
src/user_pool/domain/services/: user.py
src/user_pool/domain/value_objects/: __init__.py  base.py  email.py  project.py  raw_password.py  user_id.py  username.py
src/user_pool/infrastructure/adapters/: __init__.py  bcrypt_password_hasher.py  http_cookie_header_token_transport.py  jwt_identity_provider.py  jwt_token_manager.py  postgres_user_read.py  postgrs_user_write.py  redis_assigned_user_read.py  redis_assigned_user_write.py  redis_cache_connection_checker.py  sqlalchemy_connection_checker.py  sqlalchemy_user_mapper.py  uuid7_user_id_generator.py
src/user_pool/infrastructure/db/: constraint_rules.py  exception_rules.py  sqlalchemy_exception_mapper.py  sqlalchemy_transaction_manager.py
src/user_pool/setup/: config.py  main.py
src/user_pool/setup/components/: app.py  config_builder.py  logger.py  orchestration.py
tests/domain/entities/: test_base.py
tests/domain/value_objects/: test_base.py  test_email.py  test_raw_password.py  test_username.py
tests/unit/application/commands/: test_all_users_unlocked.py  test_login.py  test_logout.py  test_register.py  test_user_created.py  test_user_locked.py  test_user_unlocked.py
tests/unit/application/common/: test_user_context.py
tests/unit/application/queries/: test_user_get_by_id.py  test_users_list.py
(+58 files in other folders)
